unpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>BL</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>BL%28医療%29</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>保留</fullName>
        </values>
        <values>
            <fullName>引継ぎ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>調査中</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SJ中国</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>保留</fullName>
        </values>
        <values>
            <fullName>引継ぎ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>調査中</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>インド大使館</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>保留</fullName>
        </values>
        <values>
            <fullName>引継ぎ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>調査中</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>カンボジア大使館</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>保留</fullName>
        </values>
        <values>
            <fullName>引継ぎ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>調査中</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>メディック</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>保留</fullName>
        </values>
        <values>
            <fullName>引継ぎ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>調査中</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>三井マリン</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>保留</fullName>
        </values>
        <values>
            <fullName>引継ぎ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>調査中</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>三井住友</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>保留</fullName>
        </values>
        <values>
            <fullName>引継ぎ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>調査中</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>健康相談</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>保留</fullName>
        </values>
        <values>
            <fullName>引継ぎ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>調査中</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>大使館</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>保留</fullName>
        </values>
        <values>
            <fullName>引継ぎ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>調査中</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>韓国大使館</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>クローズ</fullName>
        </values>
        <values>
            <fullName>保留</fullName>
        </values>
        <values>
            <fullName>引継ぎ</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>調査中</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccidentDate__c</fullName>
        <label>事故日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccidentPlace__c</fullName>
        <label>事故場所</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccidentSummary__c</fullName>
        <label>事故概要</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(OR(MONTH(today())-MONTH( DateOfBirth__c )&gt;0,AND(MONTH(TODAY()) - MONTH(DateOfBirth__c )&gt;=0,DAY(TODAY()) - DAY( DateOfBirth__c )&gt;=0)), 
YEAR(TODAY()) - YEAR( DateOfBirth__c ), 
YEAR(TODAY()) - YEAR( DateOfBirth__c )-1)</formula>
        <label>年齢</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agree__c</fullName>
        <label>個人情報同意状況</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ReceiptLine__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>同意済み</fullName>
                </value>
                <value>
                    <fullName>同意拒否</fullName>
                </value>
                <value>
                    <fullName>未確認</fullName>
                </value>
                <value>
                    <fullName>なし</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnshinHospitalizationWaitingPeriod__c</fullName>
        <label>入院待機期間</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnshinOutpatientWaitingPeriod__c</fullName>
        <label>外来待機期間</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>対応内容</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AppointDate__c</fullName>
        <label>予約日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AppointTime__c</fullName>
        <inlineHelpText>時間は、00.00の形式で入力して下さい。
24時は、0.00で入力してください。
例）10時30分は、10.30。　午後1時30分は、13.30。</inlineHelpText>
        <label>予約時間</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AreaName__c</fullName>
        <inlineHelpText>現在地もしくは外地名が
「その他」の場合は、
必ず地区名を入力して下さい。

その他、現在地の追記があれば入力して下さい。</inlineHelpText>
        <label>地区名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistance_Companies__c</fullName>
        <label>アシスタンス会社名</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Hospital__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Medical Management (GMMI)</fullName>
                </value>
                <value>
                    <fullName>Global Excel (GEM)</fullName>
                </value>
                <value>
                    <fullName>ChoiceNet International Mexico (CNI)</fullName>
                </value>
                <value>
                    <fullName>Assist-Card (ACI)</fullName>
                </value>
                <value>
                    <fullName>Falck</fullName>
                </value>
                <value>
                    <fullName>Medic&apos;Air International</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>AP　Companies</fullName>
                </value>
                <value>
                    <fullName>Global Voyagers Assistance (GVA）</fullName>
                </value>
                <value>
                    <fullName>Netcare 911</fullName>
                </value>
                <value>
                    <fullName>ER24</fullName>
                </value>
                <value>
                    <fullName>AMREF</fullName>
                </value>
                <value>
                    <fullName>Connex</fullName>
                </value>
                <value>
                    <fullName>PEA</fullName>
                </value>
                <value>
                    <fullName>Medexpress</fullName>
                </value>
                <value>
                    <fullName>現地委託通訳者</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BL番号</label>
        <referenceTo>BL__c</referenceTo>
        <relationshipLabel>AC受付内容</relationshipLabel>
        <relationshipName>AC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CallerCompanyTel__c</fullName>
        <label>連絡者-会社TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CallerDateOfBirth__c</fullName>
        <label>連絡者-生年月日</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerGenzaichiMofa__c</fullName>
        <label>連絡者-現在地</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerGenzaichi__c</fullName>
        <label>連絡者現在地</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerKana__c</fullName>
        <label>連絡者-（カナ）</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerMobile__c</fullName>
        <label>連絡者-携帯TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CallerOfficeName__c</fullName>
        <label>連絡者会社名称</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerPassportNo__c</fullName>
        <label>連絡者-旅券番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerSex__c</fullName>
        <label>連絡者-性別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallerShimei__c</fullName>
        <label>連絡者氏名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerTel__c</fullName>
        <label>連絡者-TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cancel_Fee__c</fullName>
        <label>取消料</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Hospital__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>説明済</fullName>
                </value>
                <value>
                    <fullName>なし</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CarryCost__c</fullName>
        <label>携行品損害</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CityName__c</fullName>
        <label>都市名</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>瀋陽</fullName>
                </value>
                <value>
                    <fullName>煙台</fullName>
                </value>
                <value>
                    <fullName>長春</fullName>
                </value>
                <value>
                    <fullName>包頭</fullName>
                </value>
                <value>
                    <fullName>済南</fullName>
                </value>
                <value>
                    <fullName>唐山</fullName>
                </value>
                <value>
                    <fullName>秦皇島</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>無錫</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>昆山</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>張家港</fullName>
                </value>
                <value>
                    <fullName>武漢</fullName>
                </value>
                <value>
                    <fullName>重慶</fullName>
                </value>
                <value>
                    <fullName>寧波</fullName>
                </value>
                <value>
                    <fullName>成都</fullName>
                </value>
                <value>
                    <fullName>十堰</fullName>
                </value>
                <value>
                    <fullName>襄陽</fullName>
                </value>
                <value>
                    <fullName>鄭州</fullName>
                </value>
                <value>
                    <fullName>南通</fullName>
                </value>
                <value>
                    <fullName>常州</fullName>
                </value>
                <value>
                    <fullName>常熟</fullName>
                </value>
                <value>
                    <fullName>南京</fullName>
                </value>
                <value>
                    <fullName>合肥</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommodityName__c</fullName>
        <label>商品名称</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactHouhou__c</fullName>
        <label>連絡方法</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>電話</fullName>
                </value>
                <value>
                    <fullName>メール</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactTel__c</fullName>
        <description>三井住友</description>
        <label>連絡先TEL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>137-0166-1632</fullName>
                </value>
                <value>
                    <fullName>159-2199-3471</fullName>
                </value>
                <value>
                    <fullName>136-0171-6371</fullName>
                </value>
                <value>
                    <fullName>136-0171-6329</fullName>
                </value>
                <value>
                    <fullName>138-0162-1001</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContentOfInquiryItem__c</fullName>
        <label>問合せ内容項目</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>気になるお体の症状に関して</fullName>
                </value>
                <value>
                    <fullName>病気、怪我に関して</fullName>
                </value>
                <value>
                    <fullName>お薬について</fullName>
                </value>
                <value>
                    <fullName>検査について</fullName>
                </value>
                <value>
                    <fullName>治療について</fullName>
                </value>
                <value>
                    <fullName>妊娠、分娩に関して</fullName>
                </value>
                <value>
                    <fullName>予防接種に関して</fullName>
                </value>
                <value>
                    <fullName>健診に関して</fullName>
                </value>
                <value>
                    <fullName>日本側医療機関参考情報</fullName>
                </value>
                <value>
                    <fullName>ＡＣマター（病院手配・提携病院情報　等）</fullName>
                </value>
                <value>
                    <fullName>サービスに関するお問い合わせ</fullName>
                </value>
                <value>
                    <fullName>サービス対象外案件</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>（教育）帰国</fullName>
                </value>
                <value>
                    <fullName>（教育）出国</fullName>
                </value>
                <value>
                    <fullName>（教育）滞在中</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>国名</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>華北</fullName>
                </value>
                <value>
                    <fullName>華中</fullName>
                </value>
                <value>
                    <fullName>華南</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>マカオ</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>韓国</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DamagesCost__c</fullName>
        <label>賠償金額</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <label>生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiseaseCost__c</fullName>
        <label>疾病治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiseaseDeathCost__c</fullName>
        <label>疾病死亡</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EndTimeText__c</fullName>
        <formula>TEXT(FLOOR(  EndTime__c))   &amp; &quot;:&quot; &amp;   IF( MOD(EndTime__c,2) &lt;= 0.09, &quot;0&quot;&amp;RIGHT(TEXT( MOD(EndTime__c,2) * 100)  , 2), RIGHT(TEXT( MOD(EndTime__c,2) * 100)  , 2) ) &amp; &quot;:00&quot;</formula>
        <label>電話終了時間(テキスト)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <inlineHelpText>時間は、00.00の形式で入力して下さい。
24時は、0.00で入力してください。
例）10時30分は、10.30。　午後1時30分は、13.30。</inlineHelpText>
        <label>電話終了時間</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimateAmount__c</fullName>
        <label>予想損害額</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>MemberName__r.ServiceArea__c</formula>
        <label>★サービス提供国</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genzaichi__c</fullName>
        <label>現在地</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ReceiptLine__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>華北</fullName>
                </value>
                <value>
                    <fullName>華中</fullName>
                </value>
                <value>
                    <fullName>華南</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>マカオ</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>北京市</fullName>
                </value>
                <value>
                    <fullName>天津市</fullName>
                </value>
                <value>
                    <fullName>山東省</fullName>
                </value>
                <value>
                    <fullName>陝西省</fullName>
                </value>
                <value>
                    <fullName>山西省</fullName>
                </value>
                <value>
                    <fullName>甘粛省</fullName>
                </value>
                <value>
                    <fullName>河南省</fullName>
                </value>
                <value>
                    <fullName>河北省</fullName>
                </value>
                <value>
                    <fullName>湖北省</fullName>
                </value>
                <value>
                    <fullName>湖南省</fullName>
                </value>
                <value>
                    <fullName>青海省</fullName>
                </value>
                <value>
                    <fullName>新疆ウイグル自治区</fullName>
                </value>
                <value>
                    <fullName>寧夏回族自治区</fullName>
                </value>
                <value>
                    <fullName>チベット自治区</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasseiDate__c</fullName>
        <label>発生日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HasseiTime__c</fullName>
        <label>発生時間</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HenshinContact__c</fullName>
        <label>返信用連絡先</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeCountryCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>一時帰国中担保</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HospitalKeitai__c</fullName>
        <label>病院形態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>総合</fullName>
                </value>
                <value>
                    <fullName>クリニック</fullName>
                </value>
                <value>
                    <fullName>歯科</fullName>
                </value>
                <value>
                    <fullName>眼耳鼻喉科</fullName>
                </value>
                <value>
                    <fullName>精神科</fullName>
                </value>
                <value>
                    <fullName>非提携</fullName>
                </value>
                <value>
                    <fullName>(非提携)総合</fullName>
                </value>
                <value>
                    <fullName>(非提携)眼耳鼻喉科</fullName>
                </value>
                <value>
                    <fullName>(非提携)その他</fullName>
                </value>
                <value>
                    <fullName>V)総合</fullName>
                </value>
                <value>
                    <fullName>V)クリニック</fullName>
                </value>
                <value>
                    <fullName>非駐在地区</fullName>
                </value>
                <value>
                    <fullName>アシスタンス会社経由</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>病院名称</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HospitalKeitai__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>第一人民医院</fullName>
                </value>
                <value>
                    <fullName>華山医院</fullName>
                </value>
                <value>
                    <fullName>児科医院</fullName>
                </value>
                <value>
                    <fullName>東方医院</fullName>
                </value>
                <value>
                    <fullName>国際和平婦幼保健院</fullName>
                </value>
                <value>
                    <fullName>児童医院</fullName>
                </value>
                <value>
                    <fullName>中山医院</fullName>
                </value>
                <value>
                    <fullName>瑞金医院</fullName>
                </value>
                <value>
                    <fullName>長寧区中心医院</fullName>
                </value>
                <value>
                    <fullName>華東医院</fullName>
                </value>
                <value>
                    <fullName>浦南医院</fullName>
                </value>
                <value>
                    <fullName>龍華医院</fullName>
                </value>
                <value>
                    <fullName>児童医学中心</fullName>
                </value>
                <value>
                    <fullName>第一人民医院(松江分院)</fullName>
                </value>
                <value>
                    <fullName>第六人民医院</fullName>
                </value>
                <value>
                    <fullName>申徳医院</fullName>
                </value>
                <value>
                    <fullName>同仁医院</fullName>
                </value>
                <value>
                    <fullName>サクラクリニック</fullName>
                </value>
                <value>
                    <fullName>上海グリーンクリニック</fullName>
                </value>
                <value>
                    <fullName>グローバルヘルスケア（浦西）</fullName>
                </value>
                <value>
                    <fullName>東羽クリニック</fullName>
                </value>
                <value>
                    <fullName>東和クリニック</fullName>
                </value>
                <value>
                    <fullName>TOWAクリニック</fullName>
                </value>
                <value>
                    <fullName>平和クリニック</fullName>
                </value>
                <value>
                    <fullName>上海ファミリークリニック</fullName>
                </value>
                <value>
                    <fullName>森茂診療所</fullName>
                </value>
                <value>
                    <fullName>ラッフルズメディカル</fullName>
                </value>
                <value>
                    <fullName>永恵華クリニック</fullName>
                </value>
                <value>
                    <fullName>グローバルヘルスケア（浦東）</fullName>
                </value>
                <value>
                    <fullName>聖安小児科クリニック</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HoukatsuDetail__c</fullName>
        <label>包括詳細</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MemberDetail__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>日本人学校（虹橋・浦東）</fullName>
                </value>
                <value>
                    <fullName>美しが丘幼稚園</fullName>
                </value>
                <value>
                    <fullName>リビングストン</fullName>
                </value>
                <value>
                    <fullName>チャンプキッズ</fullName>
                </value>
                <value>
                    <fullName>JALPAK</fullName>
                </value>
                <value>
                    <fullName>虹橋公寓</fullName>
                </value>
                <value>
                    <fullName>オイスカ幼稚園</fullName>
                </value>
                <value>
                    <fullName>広州日本人学校</fullName>
                </value>
                <value>
                    <fullName>新時代酒店</fullName>
                </value>
                <value>
                    <fullName>蘇州日本人学校</fullName>
                </value>
                <value>
                    <fullName>ジャナガーデン（ハノイ）</fullName>
                </value>
                <value>
                    <fullName>サンレッドリバー（ハノイ）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImportComm__c</fullName>
        <label>取込コメント</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndividualMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MD会員</label>
        <referenceTo>wb_Individual__c</referenceTo>
        <relationshipLabel>ケース</relationshipLabel>
        <relationshipName>IndividualMemberCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InjuryCost__c</fullName>
        <label>傷害治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InjuryDeathCost__c</fullName>
        <label>傷害死亡・後遺障害</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InsuranceCancelContact__c</fullName>
        <label>保険解約連絡事項</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCancelDate__c</fullName>
        <label>保険解約日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsuranceCurrency__c</fullName>
        <label>保険金額通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JPY（単位：千円）</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>